<resources>
    <string name="app_name">B-Billing</string>
    <!--Login-->
    <string name="TermsConditions">Esta es una versión de prueba. Todos los derechos reservados.
       <strong><u>Contáctame</u></strong>.
        <br/>
        0993640706
    </string>
    <!--Registro-->
    <string name="topMsg">Estas a punto de notar el cambio.💰</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="c1">Ingrese su contraseña</string>
    <string name="c2">Repita su contraseña</string>
    <string name="regis">Registrarse</string>
    <string name="terms_reg">Al momento de registrarse, se asume que está de acuerdo <br/>con las políticas de privacidad. <u>Toca aquí para revisarlas.</u></string>
    <string name="atras">Regresar</string>

    <!--Main Activity-->
    <string name="search">Buscar</string>
    <string name="more">Acerca de</string>
    <string name="sett">Configuraciones</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="product">Productos</string>
    <string name="client">Clientes</string>
    <string name="sell">Ventas</string>
    <string name="lastSellText">Últimas ventas</string>


    <!--Show Sell-->
    <string name="totalcompra">Total de la compra</string>

    <!--New order-->
    <string name="tocaparacambiarcliente">Toca para cambiar el cliente</string>
    <string name="nuevaorden">Nueva Orden</string>
    <!--End Order-->
    <string name="terminar">Finalizar</string>
    <string name="datosfinales">Datos Finales de la Compra</string>
    <!--Products-->
    <string name="add">Nuevo</string>
    <string name="show">Todos</string>
    <!--Ventas-->
    <string name="ventasFechaEspecifica">UN DÍA</string>
    <string name="ventasRangoFecha">VARIOS DÍAS</string>
</resources>